--- a/config/locales/promotion.pt-BR.yml
+++ b/config/locales/promotion.pt-BR.yml
@@ -19,6 +19,7 @@ pt-BR:
       edit: Editar Promoção
       delete: Excluir Promoção
       back: Voltar para Promoções
+      disable_coupon: Desabilitar
     generate_coupons:
       success: Cupons gerados com sucesso
     update:
