--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,3 +1,8 @@
 pt-BR:
   buttons:
     back: Voltar
+    edit: Editar
+    destroy: Apagar
+  error_message:
+    one: 1 erro impediu esse(a) %{model} de ser salvo(a)
+    other: "%{count} erros impediram esse(a) %{model} de ser salvo(a)"
