--- a/config/locales/promotion.pt-BR.yml
+++ b/config/locales/promotion.pt-BR.yml
@@ -28,3 +28,8 @@ pt-BR:
     destroy:
       success: Promoção apagada com sucesso
       failed: Promoção não pode ser apagada
+    search:
+      result:
+        zero: "Nenhuma promoção encontrada para o termo: %{query}"
+        one: "%{count} promoção encontrada pra o termo: %{query}"
+        other: "%{count} promoções encontradas para o termo: %{query}"
